--- a/settings.json
+++ b/settings.json
@@ -5,7 +5,7 @@
     "footerText": "&copy; 허석테크 2024. All Rights Reserved.",
 
     
-    "modelUrl": "https://teachablemachine.withgoogle.com/models/79jyH2y5Q/",
+    "modelUrl": "https://teachablemachine.withgoogle.com/models/yfd7yF5uk/",
     "classDetails": [
         {
             "name": "소",
