--- a/settings.json
+++ b/settings.json
@@ -1,26 +1,31 @@
 {
-    "pageTitle": "나는 동물인가 악인가",
-    "mainTitle": ".........",
-    "subtitle": "얼굴로 보는 인공지능 선악 테스트",
+    "pageTitle": "나만의 동물상 테스트",
+    "mainTitle": "난 무슨 동물상일까",
+    "subtitle": "얼굴로 보는 인공지능 동물상 테스트",
     "footerText": "&copy; 허석테크 2024. All Rights Reserved.",
-
     
-    "modelUrl": "https://teachablemachine.withgoogle.com/models/yfd7yF5uk/",
+    "modelUrl": "https://teachablemachine.withgoogle.com/models/CPrPznTPo/",
     "classDetails": [
         {
-            "name": "소",
+            "name": "소상",
             "title": "소상",
-            "explain": "당신은 배포가 큰 소랑 닮으셨습니다.당신의 인생동안 많은 간신배들을 만날테니 조심하세요",
-            "celeb": "존재할 수도 있습니다",
+            "explain": "흑우시네요",
+            "celeb": "",
             "color": "rgba(27, 175, 234, 1)"
         },
         {
             "name": "고양이",
             "title": "고양이상",
-            "explain": "당신은 그냥 커여운 고양이입니다.당당하게 당신의 미학을 펼치십시요",
-            "celeb": "말상 연예인: 박보영, 박민영, 한지민, 이나영, 임윤아(소녀시대)",
+            "explain": "고양이시네요",
+            "celeb": "박보영, 박민영, 한지민, 이나영, 임윤아(소녀시대)",
             "color": "rgba(251, 176, 59, 1)"
         },
+        {
+            "name": "악어",
+            "title": "악어상",
+            "explain": "악어다",
+            "celeb": "안소희(원더걸스), 오연서, 한예슬, 이성경, 이효리",
+            "color": "rgba(265, 100, 50, 1)"
+        }
     ]
 }
-
