--- a/settings.json
+++ b/settings.json
@@ -1,10 +1,10 @@
 {
-    "pageTitle": "나만의 동물상 테스트",
-    "mainTitle": "난 무슨 동물상일까",
-    "subtitle": "얼굴로 보는 인공지능 동물상 테스트",
+    "pageTitle": "당신은 뭡니까",
+    "mainTitle": "당신은.......",
+    "subtitle": "얼굴로 보는 인공지능 테스트",
     "footerText": "&copy; 허석테크 2024. All Rights Reserved.",
     
-    "modelUrl": "https://teachablemachine.withgoogle.com/models/CPrPznTPo/",
+    "modelUrl": "https://teachablemachine.withgoogle.com/models/2XgEMTXc_/",
     "classDetails": [
         {
             "name": "소상",
